--- a/Templates/nav-menu-mobile.html
+++ b/Templates/nav-menu-mobile.html
@@ -14,7 +14,7 @@
 		<li><a href="about.html">About</a></li>
 
 		<li class="dropdown">
-			<a class="dropdown-toggle">Art</a>
+			<ul class="dropdown-toggle">Art</ul>
 			<ul class="dropdown-menu">
 				<li><a href="#">The Garden</a></li>
 				<li><a href="#">People</a></li>
