--- a/Templates/nav-menu.html
+++ b/Templates/nav-menu.html
@@ -8,7 +8,7 @@
 		<li><a href="about.html">About</a></li>
 
 		<li class="dropdown">
-			<a href="photography.html">Art</a>
+			<ul class="dropdown-toggle">Art</ul>
 			<ul class="dropdown-menu">
 				<li><a href="#">The Garden</a></li>
 				<li><a href="#">People</a></li>
