--- a/Templates/nav-styles.css
+++ b/Templates/nav-styles.css
@@ -15,6 +15,7 @@ nav {
   nav ul li {
 	display: inline-block;
 	position: relative; /* Needed for positioning dropdowns */
+	font-size: 18px;
 	margin: 0 15px;
   }
   
