--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,7 @@ input[type="submit"]:hover {
 .thankyou-text {
   padding: 5%;
   text-align: center;
+  font-family: "Lato", serif;
 }
 
 .thankyou-text > button {
