--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ ul {
 
 body {
 	font-family: "Lato", serif;
-	background-color: white; /* Black background */
+	background-color: #ECECEC; /* Black background */
 	color: black; /* White text for contrast */
 	margin: 0;
 	padding: 0;
@@ -17,7 +17,7 @@ body {
 .homepage-bulletpoints {
 	margin: 2% 10% 2%;
 	padding: 2px;
-	font-size: clamp(1rem, 2vw, 2rem);
+	font-size: clamp(1rem, 1.8vw, 1.8rem);
 }
 
 /* Masonry layout */
@@ -126,7 +126,6 @@ body {
 .about-right-column {
 	flex: 1;
 	flex-direction: column;
-  background-color: grey;
   width: 100%;
   height: 100%;
 }
@@ -134,7 +133,6 @@ body {
 .about-image {
 	max-width: 100%; /* Responsive image */
 	height: auto; /* Maintain aspect ratio */
-  background-color: grey;
   display: flex;
   align-items: center;
 }
