--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ body {
 
 .about-content h1 {
 	text-align: left;
+  
 }
 
 .about-content {
@@ -196,7 +197,7 @@ input[type="submit"]:hover {
   flex-direction: column;
   align-content: center;
   border-radius: 5px;
-  background-color: white;
+  background-color: #ECECEC;
   padding: 20px;
   align-content: space-around;
 }
@@ -227,8 +228,8 @@ input[type="submit"]:hover {
 }
 
 .thankyou-text > button {
-  background-color: white;
-  color: black;
+  background-color: black;
+  color: white;
   padding: 12px 20px;
   border: none;
   cursor: pointer;
@@ -236,8 +237,9 @@ input[type="submit"]:hover {
 }
 
 .thankyou-text a {
-  color: black;
+  color: white;
   font-family: "Lato", serif;
+  text-decoration: none;
 }
 
 .thankyou-text > button:hover {
