--- a/Templates/mobile-nav-styles.css
+++ b/Templates/mobile-nav-styles.css
@@ -81,6 +81,6 @@ nav.mobile-nav {
 
   .icon {
 	margin-top: 0px;
-    width: 64px; /* Adjust as needed */
-    height: 64px; /* Adjust as needed */
-}
+    width: 64px; 
+   height: 64px; 
+  }
