--- a/Templates/nav-menu-mobile.html
+++ b/Templates/nav-menu-mobile.html
@@ -5,10 +5,11 @@
 	<div class="mobile-nav-header">
 		<span class="menu-toggle">&#9776;</span>
 		<!-- Hamburger menu icon -->
-		<a href="index.html" class="logo">
+		<!--<a href="index.html" class="logo">
 			<img src="Images\Icon.ico" alt="Logo" class="icon" />
-		</a>
+		</a> -->
 	</div>
+	<h1><a class="nav-title" href="index.html">Angela Rigby Doble</a></h1>
 	<ul class="mobile-nav-list" id="nav-list">
 		<li><a href="index.html">Home</a></li>
 		<li><a href="about.html">About</a></li>
