--- a/styles.css
+++ b/styles.css
@@ -255,6 +255,7 @@ a {
 .category-section {
   display: flex;
   flex-direction: row-reverse;
+  width: 100%;
 }
 
 /* Style the dropdown */
@@ -267,7 +268,6 @@ a {
   max-width: 400px;
 	font-family: "Lato", serif;
   margin: 0%;
-  margin-right: 5%;
 }
 
 /* Position the dropdown on the left side of the page */
@@ -276,17 +276,38 @@ a {
   z-index: 100; /* Ensure it stays above other elements */
 }
 
+.middle-bar{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-left: 5%;
+  margin-right: 5%;
+  gap: 2%
+}
+
 @media (max-width: 768px) {
-  #categoryFilter {
+  .middle-bar {
     margin-right: 2%; /* Further reduce margin for smaller devices */
     margin-left: 2%; /* Further reduce margin for smaller devices */
   }
 }
 
-@media (max-width: 900px) {
-  #categoryFilter {
-    max-width: 100%;
-    margin-left: 5%;
-    margin-right: 5%;
-  }
+.social-media-icons {
+  display: flex; /* Use flexbox for layout */
+  gap: 15px; /* Space between icons */
+  justify-content: flex-start; /* Align icons to the left */
+  padding: 1%;
+}
+
+.social-media-icons a {
+  color: #000; /* Default color */
+  font-size: 24px; /* Adjust icon size */
+  transition: color 0.3s ease;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.social-media-icons a:hover {
+  color: gray; /* Change color on hover */
 }
