--- a/styles.css
+++ b/styles.css
@@ -107,28 +107,26 @@ body {
 
 .about-left-column {
 	flex: 1; /* Adjust flex value as needed */
-	padding: 5%;
+	margin: 5%;
 	font-size: 18px;
 }
 
-.about-content h1 {
+.about-left-column h1 {
 	text-align: left;
-  
 }
 
-.about-content {
-	display: flex;
-	flex-direction: column;
-	flex: 1;
-	width: 90%;
-	line-height: 1.6;
+.about-left-column ul{
+  list-style-position: inside;
 }
+
 
 .about-right-column {
 	flex: 1;
 	flex-direction: column;
   width: 100%;
   height: 100%;
+  align-items:center;
+  display: flex;
 }
 
 .about-image {
