Added writing page plus relevent styles. Some code clean up.

--- a/Templates/nav-menu-mobile.html
+++ b/Templates/nav-menu-mobile.html
@@ -13,7 +13,7 @@
 	<ul class="mobile-nav-list" id="nav-list">
 		<li><a href="index.html">Home</a></li>
 		<li><a href="about.html">About</a></li>
-		<li><a href="sale-photocopies.html">Sales - Photocopies</a></li>
+		<li><a href="writing.html">Writing</a></li>
 		<li><a href="contact.html">Contact</a></li>
 	</ul>
 </nav>
